tests/errors/first_stage/.data/nan/nan.as
; data argument is not a number
myArr: .data 1, 2b, 3